--- a/index.html
+++ b/index.html
@@ -7,18 +7,52 @@
     <title>Emily Liu</title>
 </head>
 <body>
-    <h1>Emily Liu's Portfolio</h1>
-    <h2>I'm a Web Developer</h2>
+    <h1>Emily Liu</h1>
+    <h2>Junior Software Developer</h2>
+    <img src="./assets/images/profile.png" height="150" alt="profile picture"/>
+    <h3>Summary</h3>
+    <p>Transitioned from customer service to software development through Makers' 
+        coding bootcamp, enhancing skills in Python, JavaScript, Kotlin, and SQL 
+        while focusing on Test-Driven Development, Object-Oriented Programming, 
+        and APIs to build impactful software solutions.</p>
     <hr />
-    <div>
-        <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
-        <img src="./assets/images/movie-ranking.png" height="300px" alt="screenshots of best movices"/>
-    </div>
+   <h3>Education</h3>
+   <ul>
+    <li>Software Engineering Bootcamp</li>
+    <li>Master in Education Management</li>
+    <li>Bachelor in Teaching Chinese</li>
+   </ul>
+   <hr />
+   <h3>Work Experience</h3>
+   <ul>
+    <li><h4>Client Advisor - Louis Vuitton</h4></li>
+    <p>July 2022 - June 2024</p>
+    <li><h4>Sales Assistant - Malone Souliers</h4></li>
+    <p>Oct 2021 - July 2022</p>
+   </ul>
+   <hr />
+   <h3>Skills</h3>
+   <ul>
+    <li>
+        <h4>Programming Languages:</h4> 
+    </li>
+    <p>Python, JavaScript, Kotlin</p>
+   <li><h4>Tools and Technologies:</h4></li>
+   <p>Git, GitHub, Docker</p>
+   <li><h4>Frameworks:</h4></li>
+   <p>React, Node.js, Express.js, Flask</p>
+   <li><h4>Soft skills:</h4></li>
+   <p>Teamwork, Communication, Problem-Solving, Attention to deatails</p>
+   </ul>
+   <hr />
+   <h3>Awards and Certification</h3>
+   <ul>
+    <li>
+        <h4>EMEA Vioce Award 2023  Best client advisor of the year - Louis Vuitton</h4>
 
-    <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
-    <img src="./assets/images/birthday-invite.png" height="300px" alt="screenshot of birthday invite" />
-    <hr />
-    <a href="./public/about.html">About Me</a>
+    </li>
+
+   </ul>
     <a href="./public/contact.html">Contact Me</a>
 
 </body>
